US23803 - overflow fix to work on browsers in windows

--- a/app/shared/components/list-opportunity-extender-body/list-opportunity-extender-body.component.scss
+++ b/app/shared/components/list-opportunity-extender-body/list-opportunity-extender-body.component.scss
@@ -2,7 +2,8 @@
 
 .inline {
   display: inline-block;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .opportunity-detail-row {
